# llm-rag-high-cardinality-sql-agent

./: .env.example  README.md  pyproject.toml
WordMatchSim/: distance_metrics.py  embeddings.py  tfidf.py
docs/: 01_vector_store.ipynb
